# ChangeLog for media-gfx/hugin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.74 2009/10/11 09:57:16 maekke Exp $

*hugin-2009.4.0_rc1 (11 Oct 2009)

  11 Oct 2009; Markus Meier <maekke@gentoo.org> +hugin-2009.4.0_rc1.ebuild:
  version bump

*hugin-2009.2.0 (30 Sep 2009)

  30 Sep 2009; Markus Meier <maekke@gentoo.org>
  -hugin-2009.2.0_beta3.ebuild, +hugin-2009.2.0.ebuild,
  -files/hugin-2009.2.0_beta3-asneeded.patch:
  version bump to final 2009.02.0 release

  29 Sep 2009; Markus Meier <maekke@gentoo.org> hugin-0.7.0.ebuild,
  hugin-0.8.0.ebuild, hugin-2009.2.0_beta3.ebuild:
  block dev-util/cocom due to a file collision wrt bug #280241

*hugin-2009.2.0_beta3 (13 Sep 2009)

  13 Sep 2009; Markus Meier <maekke@gentoo.org> hugin-0.7.0.ebuild,
  -hugin-0.7.0-r1.ebuild, +hugin-2009.2.0_beta3.ebuild,
  +files/hugin-2009.2.0_beta3-asneeded.patch:
  version bump, EAPI=2 for stable ebuild, remove old

  01 Aug 2009; Markus Meier <maekke@gentoo.org> hugin-0.8.0.ebuild:
  tweak x11-libs/wxGTK dep for bug #279653 and bug #269689

*hugin-0.8.0 (26 Jul 2009)

  26 Jul 2009; Markus Meier <maekke@gentoo.org> -hugin-0.8.0_beta1.ebuild,
  -hugin-0.8.0_beta2.ebuild, -hugin-0.8.0_beta3.ebuild,
  -hugin-0.8.0_beta4.ebuild, -hugin-0.8.0_rc1.ebuild,
  -hugin-0.8.0_rc3.ebuild, -hugin-0.8.0_rc4.ebuild, -hugin-0.8.0_rc5.ebuild,
  +hugin-0.8.0.ebuild, -files/hugin-0.8.0_beta1-as-needed.patch,
  -files/hugin-0.8.0_rc3-unset_lapack.patch:
  bump to 0.8.0 final release

*hugin-0.8.0_rc5 (09 Jul 2009)

  09 Jul 2009; Markus Meier <maekke@gentoo.org> +hugin-0.8.0_rc5.ebuild:
  version bump (this will likely be the last rc)

  28 Jun 2009; Tiziano Müller <dev-zero@gentoo.org> hugin-0.8.0_rc4.ebuild,
  +files/hugin-0.8.0_rc4-use_system_cmake_findboost.patch:
  Added patch to make it build with recent boost versions. Removed now
  unnecessary patch from stack. Added missing exiftool dependency.
