@@ -9,16 +9,18 @@ DIST hugin-0.7.0.tar.gz 6074207 RMD160 a64875d9b86dbc54b3959fdb54fbd77b5a16a119 
 DIST hugin-0.8.0.tar.gz 12077874 RMD160 c98ff8558e8094b50aa8ed6b556f72bb0be8da40 SHA1 698f0a7c4bb25efdf06313d05e3980f20d088ce5 SHA256 cf0a138aa19f179c3d5a459dfc1217789e963e3f815fde3fdb46ea913310bf4a
 DIST hugin-2009.2.0.tar.gz 11159002 RMD160 78626de90a1fe77c55509a40722a94dcb61789fa SHA1 aaf41867a7face95ec0b8ae753299da75448ed5c SHA256 620e8ea2e3a65b0e51fad7a450b474d01d9d8ddf08e26f7b6866dee97458b0fc
 DIST hugin-2009.4.0_rc1.tar.gz 11582817 RMD160 5f34845b66e58bd596dd221cb22d9a1553f426ce SHA1 ee761ee7c28f09d83ed3f94765a3faa82368bd7f SHA256 bcf476a380f5108dd4a34e9a7b263bb939bc9fcd25a228ec884f4bf6e2c24fb8
+DIST hugin-2009.4.0_rc2.tar.gz 11759016 RMD160 beee6828ad5d765e56b47db1cf87c24ca2bad7ec SHA1 d9958689d1b1b4671acffd4c3ead14da7783e8a3 SHA256 7e1012d920eb325b79a51bf4728f1480dd3259cbf7d674fce81082b4b9b47209
 EBUILD hugin-0.7.0.ebuild 954 RMD160 cc65bea1802e70855fb448425e79adc3e8b447f1 SHA1 5ca29e1fed36e928610931d850ed2f8ede3c0457 SHA256 f37212b8fe9af8a3e06ea59adfb412416736d8b0c0492fc56442e842bd978a00
 EBUILD hugin-0.8.0.ebuild 1650 RMD160 ed4b7d8059376358ac25189f12e54a1c3b4d5b45 SHA1 559ad2044e40cad72b2686ec5bcb1e1107c7b5eb SHA256 ab3ad8d9e4cda233d11685c7932173cb3101a782234e0a185e7f6c62b6825b64
 EBUILD hugin-2009.2.0.ebuild 1388 RMD160 829a27cf33e58e1f37486a46f9da6ea4400c5b9f SHA1 53ed17e07b67c511b0aa3b684a8338c15649f4e7 SHA256 3dde48a50500b9bc1c179a99f753927668d5bd223a182e05f5553c400d305a3e
 EBUILD hugin-2009.4.0_rc1.ebuild 1392 RMD160 6b1bc2397f3074c42be4c2037ff9920e1add6675 SHA1 5145a1d76b6d8c0380eb5b0afcf20945b2340caa SHA256 f9b484e5002d24a704da3a34fdd4a493b94d6a8c64c834ea4bc778c73c17239c
-MISC ChangeLog 12669 RMD160 5d934fcde21ac063109038237d7cec70ac4dbdad SHA1 b4aca6701803b6419696a91fcdd04177e2207b36 SHA256 2369c9dc81fc045ab4cda96aa02dd4505d92736cbe0b72065e2bc7b699a08c6f
+EBUILD hugin-2009.4.0_rc2.ebuild 1392 RMD160 f4f3bc9b2de37583f31dff8e373f964ceabfd9f4 SHA1 6b395808550cc39539229ddc6e1487dd848932be SHA256 10ea769cd11c1719c2dd653fd06898565bfde65c7d07d8dc25803b6f25a0f487
+MISC ChangeLog 12788 RMD160 5660f6e352a86c46d1f2459083f96651a44c0a9b SHA1 f7637e61dfce462935db360f5a119e5c6b214ed1 SHA256 6c38886609a848b279d37228779fcaf72b14e59b267592e13239a4fe62879acc
 MISC metadata.xml 389 RMD160 245f5d872a463181d63366d6c76a82c87d020fd7 SHA1 a26b77c69d62bedb9789e79b5ca35f28fa56981d SHA256 6f26cd9c2b64a96c1c86a8a468a261af4cf4dfaa86b4d7ddcfaee1ca98314803
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrRrIMACgkQkKaRLQcq0GKm6ACdEM7KjoFweMQGvRYGEf4sTpYX
-BzQAnicEC8/LEKHUknaSH/aWgP1T+Zke
-=kFiH
+iEYEARECAAYFAkrc540ACgkQkKaRLQcq0GJWDACfZBFOvIneorsOG/qXQQHEk1yh
+jRAAoLTdCZRej9sTQAg46wgF6UPO0aYw
+=1k/1
 -----END PGP SIGNATURE-----
