@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/hugin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.74 2009/10/11 09:57:16 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/hugin/ChangeLog,v 1.75 2009/10/19 22:25:42 maekke Exp $
+
+*hugin-2009.4.0_rc2 (19 Oct 2009)
+
+  19 Oct 2009; Markus Meier <maekke@gentoo.org> +hugin-2009.4.0_rc2.ebuild:
+  bump
 
 *hugin-2009.4.0_rc1 (11 Oct 2009)
 
